@@ -24,8 +24,10 @@
       [% ELSIF item.type == 'video' %]
       <video width="[% item.width %]" data-width="[% item.width %]" height="[% item.height %]" data-height="[% item.height %]" src="[% item.href %]" poster="[% item.src %]" controls></video>
       [% ELSIF item.type == 'album' %]
+      [% UNLESS hide_children %]
       [% UNLESS item.unlisted %]
       <a title="Click to view complete album" href="[% item.href %]index.html"><img alt="[% item.name %]" width="[% item.width %]" data-width="[% item.width %]" height="[% item.height %]" data-height="[% item.height %]" src="[% item.src %]"></a>
+      [% END %]
       [% END %]
       [% END %]
       [% END %]
